Created new file for jquery scripts and added the route in layout

--- a/Code/src/web/views/layout.jade
+++ b/Code/src/web/views/layout.jade
@@ -8,6 +8,7 @@ script(src="/bower_components/jquery-ui/jquery-ui.min.js" )
 script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" )
 script( type="text/javascript", src="/js/ui.js" )
 script( type="text/javascript", src="/js/jquery.maskedinput.js" )
+script( type="text/javascript", src="/js/jqueryscripts.js" )
 block scripts
 
 html.no-js
