--- a/Code/src/web/views/bolo-create-boat-form.jade
+++ b/Code/src/web/views/bolo-create-boat-form.jade
@@ -47,7 +47,7 @@ block content
             .col-md-4
                 +select_options( "trailerTagLicenseState", "Tag License Plate", states, false, "" )
             .col-md-8
-                +input_text( "trailerTagLicenseNumber", "", "", false, "" )
+                +input_text( "trailerTagLicenseNumber", "", "Only Numbers", false, "" )
 
         .form-group.row
             .col-md-4
