--- a/Code/src/web/views/partials/bolo-options.jade
+++ b/Code/src/web/views/partials/bolo-options.jade
@@ -31,6 +31,14 @@
         '','Canceled', 'In Custody', 'Located', 'Recovered'
     ]
 
+    var vehicles_makes = [
+        '', 'Acura', 'Alfa Romeo', 'Aston Martin', 'Audi', 'Bentley', 'BMW', 'Buick', 'Cadillac', 'Chevrolet',
+        'Chrysler', 'Dodge', 'Ferrari', 'Fiat', 'Ford', 'Genesis', 'GMC', 'Honda', 'Hyundai', 'Infinity',
+        'Jaguar', 'Jeep', 'Kia', 'Lamborghini', 'Land-Rover', 'Lexus', 'Lincoln', 'Lotus', 'Maserati', 'Mazda',
+        'McLaren', 'Mercedez Benz', 'MINI', 'Mitsubishi', 'Nissan', 'Porsche', 'Ram', 'Rolls Royce', 'Scion',
+        'Smart', 'Subaru', 'Tesla', 'Toyota', 'Volswagen', 'Volvo'
+    ]
+
     var states = [
         "FL", "AL", "AK", "AZ", "AR", "CA", "CO", "CT", "DE", "DC", "FM",
         "GA", "HI", "ID", "IL", "IN", "IA", "KS", "KY", "LA", "ME", "MD",
