--- a/Code/src/web/views/bolo-search-form.jade
+++ b/Code/src/web/views/bolo-search-form.jade
@@ -34,6 +34,16 @@ block content
         +input_text( "weight", "Weight - Pounds", "e.g. 188", false, "" )
         +select_options( "hairColor", "Hair Color", hair_colors, false, "" )
 
+        div.text-danger.strong.h4 Theft - Auto
+
+        +input_text( "vehicleYear", "Year", "e.g. 2016", false,  "" )
+        +select_options( "vehicleMake", "Make", vehicles_makes, false, "" )
+        +input_text( "vehicleModel", "Model", "", false,  "" )
+        +input_text( "vehicleTrim", "Trim", "", false,  "" )
+        +input_text( "vehicleColor", "Color", "", false, "" )
+        +input_text( "vehicleLicensePlate", "License Plate", "", false, "" )
+        +input_text( "vehicleIdNumber", "Vehicle Identification Number (VIN)", "", false,  "" )
+
 
         +input_text( "wildcard", "Wildcard Search", "", false, "" )
         +check_box("matchFields","Match Fields",true)
