Created the new fields for theft boat in search

--- a/Code/src/web/views/partials/bolo-options.jade
+++ b/Code/src/web/views/partials/bolo-options.jade
@@ -9,6 +9,15 @@
         'THEFT - PETIT', 'WANTED', 'FIELD INTERVIEW'
     ]
 
+    var categoriesSearch = [
+        '', 'ARSON', 'BURGLARY', 'DOMESTIC SECURITY', 'ESCAPE',
+        'FRAUD', 'HOME INVASION', 'HOMICIDE', 'INFORMATION', 'MISSING JUVENILE',
+        'MISSING PERSON', 'NARCOTICS', 'NEED TO IDENTIFY', 'OFFICER SAFETY',
+        'PC TO ARREST', 'ROBBERY', 'RUNAWAY', 'SEX OFFENSE',
+        'SITUATIONAL AWARENESS', 'THEFT - AUTO', 'THEFT - BOAT', 'THEFT - GRAND',
+        'THEFT - PETIT', 'WANTED', 'FIELD INTERVIEW'
+    ]
+
     var sex = ['','Male','Female'
     ]
 
