Created new menu for search bolo in the main page.  Created page for search theft-auto bolo.  Created page for search theft-boat bolo. Created the new index for the new bolo theft auto and bolo thef boat.  Added to the scripts cloudant schema reset and cloudant reset the values for the new index.  Created the routes for the new pages. Added new values for bolo options. Added the behavior to match words separated by a space in the search fields

--- a/Code/src/web/views/partials/bolo-options.jade
+++ b/Code/src/web/views/partials/bolo-options.jade
@@ -9,13 +9,12 @@
         'THEFT - PETIT', 'WANTED', 'FIELD INTERVIEW'
     ]
 
-    var categoriesSearch = [
-        '', 'ARSON', 'BURGLARY', 'DOMESTIC SECURITY', 'ESCAPE',
-        'FRAUD', 'HOME INVASION', 'HOMICIDE', 'INFORMATION', 'MISSING JUVENILE',
-        'MISSING PERSON', 'NARCOTICS', 'NEED TO IDENTIFY', 'OFFICER SAFETY',
-        'PC TO ARREST', 'ROBBERY', 'RUNAWAY', 'SEX OFFENSE',
-        'SITUATIONAL AWARENESS', 'THEFT - AUTO', 'THEFT - BOAT', 'THEFT - GRAND',
-        'THEFT - PETIT', 'WANTED', 'FIELD INTERVIEW'
+    var categoriesAuto = [
+        '', 'THEFT - AUTO'
+    ]
+
+    var categoriesBoat = [
+        '', 'THEFT - BOAT'
     ]
 
     var sex = ['','Male','Female'
@@ -49,14 +48,14 @@
     ]
 
     var states = [
-        "FL", "AL", "AK", "AZ", "AR", "CA", "CO", "CT", "DE", "DC", "FM",
+        "", "FL", "AL", "AK", "AZ", "AR", "CA", "CO", "CT", "DE", "DC", "FM",
         "GA", "HI", "ID", "IL", "IN", "IA", "KS", "KY", "LA", "ME", "MD",
         "MA", "MI", "MN", "MS", "MO", "MT", "NE", "NV", "NH", "NJ", "NM",
         "NY", "NC", "ND", "MP", "OH", "OK", "OR", "PW", "PA", "RI", "SC",
         "SD", "TN", "TX", "UT", "VT", "VI", "VA", "WA", "WV", "WI", "WY"
     ]
 
-    var boatFeet = []
+    var boatFeet = ['']
     for(var startFeet=1; startFeet<=100; startFeet++)boatFeet.push(startFeet);
 
     var v_propulsion = [
