--- a/Code/src/web/views/bolo-search-form.jade
+++ b/Code/src/web/views/bolo-search-form.jade
@@ -17,12 +17,11 @@ block content
 
     form#create-bolo-form(action="/bolo/search" enctype="multipart/form-data" method="post")
         input( type="hidden" name="status" value="New" )
+
+        div.text-danger.strong.h4 Search General Bolo
+
         +select_options( "agencyName", "Agency", agencies, true, "" )
-
-        +select_options( "category", "Category", categoriesSearch, true, "" )
-
-        div.text-danger.strong.h4 General Bolo
-
+        +select_options( "category", "Category", categories, true, "" )
         +input_text( "firstName", "First Name", "", false, "" )
         +input_text( "lastName", "Last Name", "", false,  "" )
         +input_text( "dob", "Date of Birth (MM/DD/YYYY )", "MM/DD/YYYY", "" )
@@ -34,70 +33,6 @@ block content
         +input_text( "height", "Height - Feet-Inches (e.g. 05-09)", "e.g. 05-09", false, "" )
         +input_text( "weight", "Weight - Pounds", "e.g. 188", false, "" )
         +select_options( "hairColor", "Hair Color", hair_colors, false, "" )
-
-        +input_text( "wildcard", "Wildcard Search", "", false, "" )
-        +check_box("matchFields","Match Fields",true)
-        .form-group
-            button.btn.btn-primary( type="submit" value="save") Search
-
-        div.text-danger.strong.h4 Theft - Auto
-
-        +input_text( "vehicleYear", "Year", "e.g. 2016", false,  "" )
-        +select_options( "vehicleMake", "Make", vehicles_makes, false, "" )
-        +input_text( "vehicleModel", "Model", "", false,  "" )
-        +input_text( "vehicleTrim", "Trim", "", false,  "" )
-        +input_text( "vehicleColor", "Color", "", false, "" )
-        +input_text( "vehicleLicensePlate", "License Plate", "", false, "" )
-        +input_text( "vehicleIdNumber", "Vehicle Identification Number (VIN)", "", false,  "" )
-
-        +input_text( "wildcard", "Wildcard Search", "", false, "" )
-        +check_box("matchFields","Match Fields",true)
-        .form-group
-            button.btn.btn-primary( type="submit" value="save") Search
-
-        div.text-danger.strong.h4 Theft - Boat (Vessel)
-
-        +input_text( "boatYear", "Year", "e.g. 2016", false, "" )
-        +input_text( "boatManufacturer", "Manufacturer", "", false, "" )
-        +input_text( "boatType", "Type", "", false, "" )
-        +select_options( "boatLength", "Length - Feet", boatFeet, false, "" )
-        +input_text( "boatColor", "Color", "", false, "" )
-        +input_text( "boatHullIdNumber", "Hull Identification Number", "", false, "" )
-        .row
-            .col-md-4
-                +select_options( "boatRegistrationNumberSt", "Registration Number", states, false, "" )
-            .col-md-8
-                +input_text( "boatRegistrationNumberNu", "", "e.g. 1234AB", false, "" )
-
-        +input_text( "wildcard", "Wildcard Search", "", false, "" )
-        +check_box("matchFields","Match Fields",true)
-        .form-group
-            button.btn.btn-primary( type="submit" value="save") Search
-
-        div.text-danger.strong.h4 Theft - Boat (Propulsion)
-
-        +select_options( "propulsion", "Propulsion", v_propulsion, false, "" )
-        +select_options( "propulsionType", "Type", v_propulsion_type, false, "" )
-        +select_options( "propulsionMake", "Make", v_propulsion_make, false, "" )
-        +input_text( "propulsionModel", "Model", "", false, "" )
-        +input_text( "propulsionSerialNumber", "Serial Number", "", false, "" )
-
-        +input_text( "wildcard", "Wildcard Search", "", false, "" )
-        +check_box("matchFields","Match Fields",true)
-        .form-group
-            button.btn.btn-primary( type="submit" value="save") Search
-
-        div.text-danger.strong.h4 Theft - Boat (Trailer)
-
-        +select_options( "trailer", "Trailer", v_trailer, false, "" )
-        +select_options( "trailerManufacturer", "Manufacturer", v_trailer_manufacturer, false, "" )
-        +input_text( "trailerVIN", "Vehicle ID Number", "", false, "" )
-        .row
-            .col-md-4
-                +select_options( "trailerTagLicenseState", "Tag License Plate", states, false, "" )
-            .col-md-8
-                +input_text( "trailerTagLicenseNumber", "", "Only Numbers", false, "" )
-
 
         +input_text( "wildcard", "Wildcard Search", "", false, "" )
         +check_box("matchFields","Match Fields",true)
