--- a/Code/src/web/views/login.jade
+++ b/Code/src/web/views/login.jade
@@ -8,7 +8,7 @@ block jumbo
           div(style="display: flex; justify-content: center;")
               img(src= "/img/chiefsofpolice.png" style="height:200px;")
             h1(style="text-align: center;") BOLO
-            p Flier Creator Version 5.0
+            p Flier Creator 
             p.strong Situational Awareness Multi-Jurisdictional Resource
 
 block content
