added user guide PDF and fix minor bugs

--- a/Code/src/web/views/about-us.jade
+++ b/Code/src/web/views/about-us.jade
@@ -7,15 +7,24 @@ block jumbo
             h3 About Us
 
 block content
-    img#featured.img-fluid( src="/img/ceballos.jpg" alt="", width=400 )
-    h3 Founder: Chief Samuel Ceballos
-    P
-    img#featured.img-fluid( src="/img/UGpic.jpg" alt="", width=400 )
-    h3 Cofounder: Major Jason Cohen
-    p
-    img#featured.img-fluid( src="/img/UGpic.jpg" alt="", width=400 )
-    h3 Project Mentor: Juan Caraballo
-    P
-    img#featured.img-fluid( src="/img/UGpic.jpg" alt="", width=400 )
-    h3 Project Mentor: Robert Loredo
-    p
+    table
+        tr
+            td.col-md-6
+                img#featured.img-fluid( src="/img/ceballos.jpg" alt="", width=400 )
+                h3 Founder: Chief Samuel Ceballos
+                P
+
+            td.col-md-6
+                img#featured.img-fluid( src="/img/UGpic.jpg" alt="", width=400 )
+                h3 Cofounder: Major Jason Cohen
+                p
+
+        tr
+            td.col-md-6
+                img#featured.img-fluid( src="/img/UGpic.jpg" alt="", width=400 )
+                h3 Project Mentor: Juan Caraballo
+                P
+            td
+                img#featured.img-fluid( src="/img/UGpic.jpg" alt="", width=400 )
+                h3 Project Mentor: Robert Loredo
+                p
