--- a/Code/src/web/public/css/style.css
+++ b/Code/src/web/public/css/style.css
@@ -78,10 +78,10 @@ input[type="file"] {
     background-color: #f9f9f9;
 }
 
-/* The container <div> - needed to position the dropdown content */
+/* The container <div> - needed to position the dropdown content
 .dropdown {
     z-index: 10;
-}
+}*/
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
