--- a/Code/src/web/views/partials/bolo-options.jade
+++ b/Code/src/web/views/partials/bolo-options.jade
@@ -47,6 +47,10 @@
         'Smart', 'Subaru', 'Tesla', 'Toyota', 'Volswagen', 'Volvo'
     ]
 
+    var v_style = [
+        '', '2 Door', '4 Door', 'Convertible', 'Bus', 'Tractor Truck', 'Motorcycle', 'Scooter', 'Moped'
+    ]
+
     var states = [
         "", "FL", "AL", "AK", "AZ", "AR", "CA", "CO", "CT", "DE", "DC", "FM",
         "GA", "HI", "ID", "IL", "IN", "IA", "KS", "KY", "LA", "ME", "MD",
@@ -67,14 +71,9 @@
     ]
 
     var v_propulsion_make = [
-        '', 'Evinrude', 'Honda', 'Johnson', 'Manner', 'Mariner', 'Mercury', 'Nissan', 'Susuki', 'Tucson', 'Yamaha'
+        '', 'Evinrude', 'Force', 'Honda', 'Johnson', 'Mariner', 'Mercury', 'Nissan', 'Susuki', 'Tuhotsu', 'Yamaha'
     ]
 
     var v_trailer = [
-        'N/A', 'Yes'
-    ]
-
-    var v_trailer_manufacturer = [
-        'N/A', 'ACE Trailers', 'Aluma', 'Boatmaster Trailers', 'Continental Trailers', 'EZ Loader Boat Trailers',
-        'Integrity Trailers', 'Mastercraft Boat Company', 'Road King Trailers', 'Wolverine Trailers'
+        '', 'Yes'
     ]
