--- a/Code/src/web/views/bolo-create-generalbolo-form.jade
+++ b/Code/src/web/views/bolo-create-generalbolo-form.jade
@@ -17,14 +17,14 @@ block content
 
         +input_text( "firstName", "First Name", "", false, "" )
         +input_text( "lastName", "Last Name", "", false,  "" )
-        +input_text( "dob", "Date of Birth (MM/DD/YYYY )", "MM/DD/YYYY", "" )
+        +input_text( "dob", "Date of Birth (MM/DD/YYYY )", "", false, "" )
         +input_text( "dlNumber", "Drivers License Number", "", false, "" )
         +input_text( "address", "Address", "", false, "" )
-        +input_text( "zipCode", "Zip Code", "e.g. 33333", false, "" )
+        +input_text( "zipCode", "Zip Code", "", false, "" )
         +select_options( "race", "Race", races, false, "" )
         +select_options( "sex", "Sex", sex, false, "" )
-        +input_text( "height", "Height - Feet-Inches (e.g. 05-09)", "e.g. 05-09", false, "" )
-        +input_text( "weight", "Weight - Pounds", "e.g. 188", false, "" )
+        +input_text( "height", "Height - Feet-Inches (e.g. 05-09)", "", false, "" )
+        +input_text( "weight", "Weight - Pounds", "", false, "" )
         +select_options( "hairColor", "Hair Color", hair_colors, false, "" )
         +input_textarea( "tattoos", "Tattoos", "", false, "" )
 
