--- a/Code/src/web/views/bolo-details-boat.jade
+++ b/Code/src/web/views/bolo-details-boat.jade
@@ -71,6 +71,10 @@ block content
                    +form_labels_row("Manufacturer", bolo.data.boatManufacturer, bolo.data.boatManufacturer?"":"hidden")
                 else
                    +form_labels_row("Manufacturer", "N/A" )
+                if bolo.data.boatModel.length
+                   +form_labels_row("Model", bolo.data.boatModel, bolo.data.boatModel?"":"hidden")
+                else
+                   +form_labels_row("Model", "N/A" )
                 if bolo.data.boatType.length
                    +form_labels_row("Type", bolo.data.boatType, bolo.data.boatType?"":"hidden")
                 else
@@ -102,21 +106,13 @@ block content
                 else
                    +form_labels_row("Propulsion", "N/A" )
                 if bolo.data.propulsionType != "Select an option..."
-                   +form_labels_row("Type", bolo.data.propulsionType, bolo.data.propulsionType?"":"hidden")
+                   +form_labels_row("Motor Type", bolo.data.propulsionType, bolo.data.propulsionType?"":"hidden")
                 else
                    +form_labels_row("Type", "N/A" )
                 if bolo.data.propulsionMake != "Select an option..."
                    +form_labels_row("Make", bolo.data.propulsionMake, bolo.data.propulsionMake?"":"hidden")
                 else
                    +form_labels_row("Make", "N/A" )
-                if bolo.data.propulsionModel.length
-                   +form_labels_row("Model", bolo.data.propulsionModel, bolo.data.propulsionModel?"":"hidden")
-                else
-                   +form_labels_row("Model", "N/A" )
-                if bolo.data.propulsionSerialNumber.length
-                   +form_labels_row("Serial Number", bolo.data.propulsionSerialNumber, bolo.data.propulsionSerialNumber?"":"hidden")
-                else
-                   +form_labels_row("Serial Number", "N/A" )
 
                 div.col-xs-12.h5.text-danger.strong TRAILER
 
@@ -129,9 +125,9 @@ block content
                 else
                    +form_labels_row("Manufacturer", "N/A" )
                 if bolo.data.trailerVIN.length
-                   +form_labels_row("Vehicle ID Number", bolo.data.trailerVIN, bolo.data.trailerVIN?"":"hidden")
+                   +form_labels_row("Vehicle Identification Number", bolo.data.trailerVIN, bolo.data.trailerVIN?"":"hidden")
                 else
-                   +form_labels_row("Vehicle ID Number", "N/A" )
+                   +form_labels_row("Vehicle Identification Number", "N/A" )
                 div.row
                    div.col-xs-12
                       if bolo.data.trailerTagLicenseState != 'null' || bolo.data.trailerTagLicenseNumber != null
