--- a/Code/src/web/views/bolo-search-boat-form.jade
+++ b/Code/src/web/views/bolo-search-boat-form.jade
@@ -20,12 +20,12 @@ block content
 
         +select_options( "agencyName", "Agency", agencies, true, "" )
         +select_options( "category", "Category", categoriesBoat, true, "" )
-        //+input_text_static( "category", "Category", "", false, "THEFT - BOAT")
 
         div.text-danger.strong.h4 Vessel
 
-        +input_text( "boatYear", "Year", "e.g. 2016", false, "" )
+        +input_text( "boatYear", "Year", "", false, "" )
         +input_text( "boatManufacturer", "Manufacturer", "", false, "" )
+        +input_text( "boatModel", "Model", "", false, "" )
         +input_text( "boatType", "Type", "", false, "" )
         +select_options( "boatLength", "Length - Feet", boatFeet, false, "" )
         +input_text( "boatColor", "Color", "", false, "" )
@@ -39,16 +39,14 @@ block content
         div.text-danger.strong.h4 Propulsion
 
         +select_options( "propulsion", "Propulsion", v_propulsion, false, "" )
-        +select_options( "propulsionType", "Type", v_propulsion_type, false, "" )
+        +select_options( "propulsionType", "Motor Type", v_propulsion_type, false, "" )
         +select_options( "propulsionMake", "Make", v_propulsion_make, false, "" )
-        +input_text( "propulsionModel", "Model", "", false, "" )
-        +input_text( "propulsionSerialNumber", "Serial Number", "", false, "" )
 
         div.text-danger.strong.h4 Trailer
 
         +select_options( "trailer", "Trailer", v_trailer, false, "" )
-        +select_options( "trailerManufacturer", "Manufacturer", v_trailer_manufacturer, false, "" )
-        +input_text( "trailerVIN", "Vehicle ID Number", "", false, "" )
+        +input_text( "trailerManufacturer", "Manufacturer", "", false, "" )
+        +input_text( "trailerVIN", "Vehicle Identification Number", "", false, "" )
         .row
             .col-md-4
                 +select_options( "trailerTagLicenseState", "Tag License Plate", states, false, "" )
