Created user guide PDF and made drop down on login page for about us pages

--- a/Code/src/web/views/about-fiu.jade
+++ b/Code/src/web/views/about-fiu.jade
@@ -4,23 +4,17 @@ include ./includes/mixins.jade
 block jumbo
     .jumbotron
         .container
-            h3 About Us
+            h3 FIU's contribution
 
 block content
     table
         tr
-            td.col-md-6
-                img#featured.img-fluid( src="/img/ceballos.jpg" alt="", width=400 )
-                h3 Founder: Chief Samuel Ceballos
-                P
-
-            td.col-md-6
-                img#featured.img-fluid( src="/img/UGpic.jpg" alt="", width=400 )
-                h3 Cofounder: Major Jason Cohen
-                p
+            h1 This page is under construction
+        tr
+            p &nbsp;&nbsp;&nbsp;&nbsp; FIU made major contributions by
 
         tr
-            td.col-md-6
+            td.col-md-4
                 img#featured.img-fluid( src="/img/UGpic.jpg" alt="", width=400 )
                 h3 Project Mentor: Juan Caraballo
                 P
