--- a/Code/src/web/views/admin-layout.jade
+++ b/Code/src/web/views/admin-layout.jade
@@ -19,6 +19,9 @@ block jumbo
                 li(class=( admin_nav === 'admin-dataSubscriber' ? 'active' : '' ))
                   if(tier === 'ROOT')
                     a(href="/admin/dataSubscriber") Data Subscribers
+                li(class=( admin_nav === 'admin-systemSetting' ? 'active' : '' ))
+                  if(tier === 'ROOT')
+                    a(href="#") System Setting
         .col-sm-9
             include ./partials/global-alerts.jade
             block admin-content
