--- a/Code/src/web/views/includes/_nav.jade
+++ b/Code/src/web/views/includes/_nav.jade
@@ -9,24 +9,40 @@ mixin nav(name, id)
                 span.icon-bar
                 span.icon-bar
             a.navbar-brand(href="/")= name
- 
+
         .collapse.navbar-collapse( id=id )
             block
- 
+
 mixin nav_item(href, active)
     li(class=active): a( href=href )
         block
- 
+
 mixin nav_item_dropdown(href, active)
     li(class=["dropdown", active])
         a.dropdown-toggle( href=href, data-toggle="dropdown", role="button", aria-expanded="false" )= attributes.label
             span.caret
         ul.dropdown-menu( role="menu" )
             block
- 
+
 mixin nav_divider
     li.divider
- 
+
 mixin nav_header
     li.dropdown-header
         block
+
+
+mixin dropdown_menu ( label )
+    -
+        var atts = {
+            'href'          : '#',
+            'data-toggle'   : 'dropdown',
+            'role'          : 'button',
+            'aria-haspopup' : 'true',
+            'aria-expanded' : 'false',
+        };
+    li.dropdown
+        a( class="dropdown_toggle" )&attributes( atts ) #{label}
+            span.caret
+        ul.dropdown-menu
+            block
