Tier 3 control over user subscritions

--- a/Code/src/web/views/agency-edit-form.jade
+++ b/Code/src/web/views/agency-edit-form.jade
@@ -106,6 +106,8 @@ block admin-content
                         a( href=watermark_url )
                             img( src=watermark_url alt="Watermark Image" )
 
+        +check_box("preventUnsubscription","Prevent Agency's users from unsubscribing",true)
+
         .form-group
             button.btn.btn-primary( type="submit" value="save" ) Submit
 
