Completed Agency Management for Tier3 v1.0

--- a/Code/src/web/views/includes/_form.jade
+++ b/Code/src/web/views/includes/_form.jade
@@ -12,6 +12,13 @@ mixin check_box(name,label,required)
             span #{label}
         input#checkbox1.checkbox.style-2(type='checkbox',name=name, checked=false)
 
+mixin check_boxChecked(name,label,required)
+    .form-group
+        input(type="hidden", name=name, value=0)
+        label(for='checkbox1')
+            span #{label}
+        input#checkbox1.checkbox.style-2(type='checkbox',name=name, checked=true)
+
 
 mixin input_text( name, label, placeholder, required, value, type )
     .form-group
